# JNIDemo

./: ReadMe.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/gif/ping/jnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/gif/ping/jnidemo/: FFmpeg.java  MainActivity.java
app/src/main/jni/ffmpeg/: player.c
app/src/test/java/com/gif/ping/jnidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
